--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -106,6 +106,17 @@
         android:layout_height="2dp"
         android:background="@color/colorThree"
         android:layout_marginTop="5dp"/>
+    <include
+        android:id="@+id/view_assignment"
+        layout="@layout/content_each_weekday"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/colorThree"
+        android:layout_marginTop="5dp"/>
 
 </LinearLayout>
 
