--- a/app/src/main/res/layout/content_periods.xml
+++ b/app/src/main/res/layout/content_periods.xml
@@ -35,13 +35,31 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@android:color/darker_gray"
-            android:layout_marginTop="5dp"
-            android:id="@+id/view_line2"/>
+            android:layout_marginTop="5dp"/>
 
         <mytwistedidea.wordpress.com.dailyclass.UnscrollableListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/listView_homeUpcomingAssignments"
+            android:id="@+id/lv_periods"
+            android:layout_below="@+id/textView2"
+            android:layout_alignParentStart="true" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginTop="5dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginTop="5dp"/>
+
+        <mytwistedidea.wordpress.com.dailyclass.UnscrollableListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/lv_assignments"
             android:layout_below="@+id/textView2"
             android:layout_alignParentStart="true" />
 
