--- a/app/src/main/res/layout/content_assignment_viewing.xml
+++ b/app/src/main/res/layout/content_assignment_viewing.xml
@@ -17,6 +17,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvonly"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorThree"
+            android:gravity="center_horizontal"
+            android:text="Assignments"
+            android:textColor="#fff"
+            android:textSize="20sp" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
@@ -29,5 +40,15 @@
             android:id="@+id/lv_assignments"
             android:layout_below="@+id/textView2"
             android:layout_alignParentStart="true" />
+        <TextView
+            android:id="@+id/tv_noassignmentAsV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Add Assignment!"
+            android:textColor="#000"
+            android:textSize="20sp" />
+
+
     </LinearLayout>
 </ScrollView>
