--- a/app/src/main/res/layout/content_periods.xml
+++ b/app/src/main/res/layout/content_periods.xml
@@ -30,7 +30,20 @@
             android:layout_height="wrap_content"
             android:id="@+id/tv_note"
             android:text=" "/>
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginTop="5dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Routine of The Day "
+            android:gravity="center_horizontal"
+            android:textSize="20sp"
+            android:background="@color/colorThree"
+            android:textColor="#fff"
+            android:id="@+id/tv_routineday" />
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
@@ -43,13 +56,29 @@
             android:id="@+id/lv_periods"
             android:layout_below="@+id/textView2"
             android:layout_alignParentStart="true" />
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add Class!"
+            android:gravity="center_horizontal"
+            android:textSize="20sp"
+            android:textColor="#000"
+            android:id="@+id/tv_noroutine" />
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="@android:color/darker_gray"
             android:layout_marginTop="5dp"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:background="@color/colorThree"
+            android:text="Assignment for the Day"
+            android:textColor="#fff"
+            android:id="@+id/tv_assignmentday"
+            android:textSize="20sp"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
@@ -62,6 +91,14 @@
             android:id="@+id/lv_assignments"
             android:layout_below="@+id/textView2"
             android:layout_alignParentStart="true" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add Assignment!"
+            android:gravity="center_horizontal"
+            android:textSize="20sp"
+            android:textColor="#000"
+            android:id="@+id/tv_noassignment" />
 
     </LinearLayout>
 
